fix horizontal scrolling

--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -69,6 +69,13 @@ $my-theme: mat.define-light-theme(
 
 @include mat.all-component-themes($my-theme);
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+  background-color: rgb(243, 239, 232);
+}
+
 mat-sidenav-content {
   background-color: rgb(243, 239, 232);
 }
